<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ge.gmikeladze</groupId>
  <artifactId>PlatziStore-API-Automation-Framework</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>PlatziStore-API-Automation-Framework</name>
  <url>https://github.com/giorgi-2000-2/platzi-api-automation</url>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <restassured.version>5.5.6</restassured.version>
    <testng.version>7.11.0</testng.version>
    <guice.version>7.0.0</guice.version>
    <lombok.version>1.18.36</lombok.version>
    <extentreports.version>5.1.2</extentreports.version>
    <datafaker.version>2.4.2</datafaker.version>
    <surefire.version>3.5.2</surefire.version>
    <compiler.plugin.version>3.13.0</compiler.plugin.version>

    <suiteXmlFile>testexecution/regressiontesting.xml</suiteXmlFile>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured-bom</artifactId>
        <version>${restassured.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>json-schema-validator</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>${guice.version}</version>
    </dependency>
    <dependency>
      <groupId>net.datafaker</groupId>
      <artifactId>datafaker</artifactId>
      <version>${datafaker.version}</version>
    </dependency>
    <dependency>
      <groupId>com.aventstack</groupId>
      <artifactId>extentreports</artifactId>
      <version>${extentreports.version}</version>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler.plugin.version}</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <suiteXmlFiles>
            <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
          </suiteXmlFiles>
          <argLine>
            -Dfile.encoding=UTF-8
            -Dstdout.encoding=UTF-8
            -Dstderr.encoding=UTF-8
            -Duser.language=en
            -Duser.country=US
          </argLine>
          <trimStackTrace>false</trimStackTrace>
          <forkCount>1</forkCount>
          <reuseForks>true</reuseForks>
          <workingDirectory>${project.basedir}</workingDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>